feature | global font styles #4
styles added

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,75 @@
+//regular
+@font-face {
+    font-family: "Avenir";
+    src: url('../assets/font/AvenirNextLTPro-Regular.otf');
+    font-weight: normal;
+    font-style: normal;
+}
+//bold
+@font-face {
+    font-family: "Avenir";
+    src: url('../assets/fonts/AvenirNextLTPro-Demi.otf');
+    font-weight: bold;
+    font-style: normal;
+}
+//semi-bold
+@font-face {
+    font-family: "Avenir";
+    src: url('../assets/font/AvenirNextLTPro-Bold.otf');
+    font-weight: bolder;
+    font-style: normal;
+}
+//page header
 h1{
-    
+    font-family: 'Avenir', sans-serif;
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+}
+//section header
+h2{
+    font-family: 'Avenir', sans-serif;
+    font-size:  2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
+}
+//sub_header and page-header/section-headerMOB
+h3{
+    font-family: 'Avenir', sans-serif;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 600;
+
+    &font__page-header{
+        font-weight: 700;
+    }
+}
+//body, footer, and subheaderMOB 
+.font__body {
+    font-family: 'Avenir', sans-serif;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+
+    &-footer {
+        line-height: 1.25rem;
+    }
+
+    &-subheader__mobile{
+        font-weight: 600;
+    }
+}
+//labels and buttons
+h4{
+    font-family: 'Avenir', sans-serif;
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+    font-weight: 700;
+}
+//bodyMOB and footerMOB
+.font__body-mobile{
+    font-family: 'Avenir', sans-serif;
+    font-size: 0.813rem;
+    line-height: 1.125rem;
+    font-weight: 400;
 }
