--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,1 +1,16 @@
-$font-family: 
+//primary colors
+$primary__bandsite-black:#323232;
+$primary__bandsite-white: #fff;
+$primary__bandsite-silver: #afafaf;
+//secondary colors
+$secondary__bandsite-darkblack: #000;
+$secondary__bandsite-mercury: #e1e1e1;
+$secondary__alabaster: #fafafa;
+//paddings
+$before__headline: 3rem;
+$after__headline-components: 2.25rem;
+//paddings_mobile
+$before__headline-mobile: 1.5rem;
+$after__headline-components-mobile: 1rem;
+
+
