--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,10 +1,10 @@
 //primary colors
-$primary__bandsite-black:#323232;
-$primary__bandsite-white: #fff;
-$primary__bandsite-silver: #afafaf;
+$primary__band-black:#323232;
+$primary__band-white: #fff;
+$primary__band-silver: #afafaf;
 //secondary colors
-$secondary__bandsite-darkblack: #000;
-$secondary__bandsite-mercury: #e1e1e1;
+$secondary__band-darkblack: #000;
+$secondary__band-mercury: #e1e1e1;
 $secondary__alabaster: #fafafa;
 //paddings
 $before__headline: 3rem;
