--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,9 +1,9 @@
 //primary colors
-$primary__band-black:#323232;
+$primary__band-gray:#323232;
 $primary__band-white: #fff;
 $primary__band-silver: #afafaf;
 //secondary colors
-$secondary__band-darkblack: #000;
+$secondary__band-black: #000;
 $secondary__band-mercury: #e1e1e1;
 $secondary__alabaster: #fafafa;
 //paddings
