--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -5,7 +5,7 @@ $primary__band-silver: #afafaf;
 //secondary colors
 $secondary__band-black: #000;
 $secondary__band-mercury: #e1e1e1;
-$secondary__alabaster: #fafafa;
+$secondary__band-alabaster: #fafafa;
 //paddings
 $before__headline: 3rem;
 $after__headline-components: 2.25rem;
