--- a/styles/global.css
+++ b/styles/global.css
@@ -25,9 +25,9 @@
     margin: 0 0;
   }
 }
-@media (min-width: 1279px) {
+@media (min-width: 768px) and (max-width: 1279px) {
   h1 {
-    font-family: "Avenir Bold", sans-serif;
+    font-family: "Avenir Demi", sans-serif;
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
@@ -36,7 +36,7 @@
 }
 @media (max-width: 767px) {
   h1 {
-    font-family: "Avenir regular", sans-serif;
+    font-family: "Avenir Regular", sans-serif;
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
@@ -53,18 +53,18 @@
     margin: 0 0;
   }
 }
-@media (min-width: 1279px) {
+@media (min-width: 768px) and (max-width: 1279px) {
   h2 {
-    font-family: "Avenir Bold", sans-serif;
+    font-family: "Avenir Demi", sans-serif;
     font-size: 2.25rem;
     line-height: 2.75rem;
-    font-weight: 700;
+    font-weight: 600;
     margin: 0 0;
   }
 }
 @media (max-width: 767px) {
   h2 {
-    font-family: "Avenir regular", sans-serif;
+    font-family: "Avenir Regular", sans-serif;
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
@@ -81,21 +81,21 @@
     margin: 0 0;
   }
 }
-@media (min-width: 1279px) {
+@media (min-width: 768px) and (max-width: 1279px) {
   h3 {
-    font-family: "Avenir Demi", sans-serif;
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 600;
+    font-family: "Avenir Regular", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: lighter;
     margin: 0 0;
   }
 }
 @media (max-width: 767px) {
   h3 {
     font-family: "Avenir Demi", sans-serif;
-    font-size: 0.875rem;
+    font-size: 1rem;
     line-height: 1.375rem;
-    font-weight: 600;
+    font-weight: 500;
     margin: 0 0;
   }
 }
@@ -109,7 +109,7 @@
     margin: 0 0;
   }
 }
-@media (min-width: 1279px) {
+@media (min-width: 768px) and (max-width: 1279px) {
   .font__body, h4, p {
     font-family: "Avenir Regular", sans-serif;
     font-size: 0.875rem;
@@ -128,12 +128,23 @@
   }
 }
 
-a {
-  font-family: "Avenir regular", sans-serif;
-  font-size: 0.75rem;
-  line-height: 1.25rem;
-  font-weight: 300;
-  margin: 0 0;
+@media (max-width: 767px) {
+  a {
+    font-family: "Avenir Regular", sans-serif;
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+    font-weight: 300;
+    margin: 0 0;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  a {
+    font-family: "Avenir Regular", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    margin: 0 0;
+  }
 }
 
 ul {
