--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,14 +31,14 @@ h1{
     margin: 0 0;
     }
     @include for--tablet{
-        font-family: 'Avenir Bold', sans-serif;
+        font-family: 'Avenir Demi', sans-serif;
         font-size: 3.75rem;
         line-height: 4.25rem;
         font-weight: 700;
         margin: 0 0;
     }
     @include for--mobile{
-        font-family: 'Avenir regular', sans-serif;
+        font-family: 'Avenir Regular', sans-serif;
         font-size: 1.5rem;
         line-height: 2rem;
         font-weight: 700;
@@ -55,14 +55,14 @@ h2{
     margin: 0 0;
     }
     @include for--tablet{
-        font-family: 'Avenir Bold', sans-serif;
+        font-family: 'Avenir Demi', sans-serif;
         font-size: 2.25rem;
         line-height: 2.75rem;
-        font-weight: 700;
+        font-weight: 600;
         margin: 0 0;
     }
     @include for--mobile{
-        font-family: 'Avenir regular', sans-serif;
+        font-family: 'Avenir Regular', sans-serif;
         font-size: 1.5rem;
         line-height: 2rem;
         font-weight: 700;
@@ -79,17 +79,17 @@ h3{
     margin: 0 0;
     }
     @include for--tablet{
-        font-family: 'Avenir Demi', sans-serif;
-        font-size: 1.5rem;
-        line-height: 2rem;
-        font-weight: 600;
+        font-family: 'Avenir Regular', sans-serif;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        font-weight: lighter;
         margin: 0 0;
     }
     @include for--mobile{
         font-family: 'Avenir Demi', sans-serif;
-        font-size: 0.875rem;
+        font-size: 1rem;
         line-height: 1.375rem;
-        font-weight: 600;
+        font-weight: 500;
         margin: 0 0;
     }
 }
@@ -120,11 +120,21 @@ h3{
 }
 //labels and buttons
 a {
-    font-family: 'Avenir regular', sans-serif;
-    font-size: 0.75rem;
-    line-height: 1.25rem;
-    font-weight: 300;
-    margin: 0 0;
+    @include for--mobile{
+        font-family: 'Avenir Regular', sans-serif;
+        font-size: 0.75rem;
+        line-height: 1.25rem;
+        font-weight: 300;
+        margin: 0 0;
+    }
+    @include for--tablet{
+        font-family: 'Avenir Regular', sans-serif;
+        font-size: 1rem;
+        line-height: 1.5rem;
+        font-weight: 400;
+        margin: 0 0;
+    }
+
 }
 ul {
     margin: 0;
